--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
+    "styled-components": "^6.1.11",
     "sweetalert2": "^11.11.0",
     "three": "^0.163.0",
     "web-vitals": "^2.1.4"
