--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
+    "core-js": "^3.37.1",
     "cors": "^2.8.5",
     "effector": "^23.2.1",
     "effector-react": "^23.2.0",
